tests/cases/parser/property_access/numeric_field_too_large.hash
// run=fail, stage=parse

main := () => {
    t := (1, 2);
    t.19238123912839213812938
};
